<resources>
    <string name="app_name">Lab 7</string>
    <string name="country">Very long country name that is running for so long</string>
    <string name="hello_blank_fragment">Hello empty fragment</string>
    <string name="town">Very long town name lorem ipsum dolor sit amet</string>
    <string name="add_item">Add town</string>
    <string name="delete_dialog_title">Delete this item?</string>
    <string name="delete_dialog_negative">Cancel</string>
    <string name="delete_dialog_positive">DELETE</string>
    <string name="town_name">Town Name</string>
    <string name="country_name">Country</string>
    <string name="add">Add</string>
    <string name="flagcdn_png" translatable="false">https://flagcdn.com/w320/%s.png</string>
    <string name="check_fields">Please ensure all fields are filled right</string>
    <string name="can_not_be_empty">Can not be empty</string>
    <string name="delete_dialog_message">You are going to delete town %s with country %s</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="language">Language</string>
    <string name="load_flags">Load flags</string>
    <string name="dark_mode">Dark mode</string>
    <string name="save">Save</string>
    <string name="settings_changes_toast">Changes will be applied after application restart</string>
    <string name="town_amount">Amount of generated towns</string>
</resources>